# KembangBot

./: .gitignore  Dockerfile  README.md  README_HF.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_migration.py  0002_enable_pgvector.py  2026_03_31_1401_b606ce1dad9d_create_all_tables.py
app/: config.py  dependencies.py  main.py
app/agents/: __init__.py  conversation.py  formatter.py  graph.py  prompts.py  state.py  supervisor.py  tools.py
app/api/: __init__.py  catalog.py  conversations.py  documents.py  health.py  internal.py  leads.py  stages.py  tenants.py  webhook.py
app/core/: __init__.py  exceptions.py  model_config.py  security.py  utils.py
app/db/: __init__.py  redis.py  session.py  vector_store.py
app/models/: __init__.py  base.py  conversation.py  document.py  lead.py  message.py  product.py  stage_config.py  tenant.py
app/schemas/: __init__.py  catalog.py  common.py  conversation.py  lead.py  stage.py  tenant.py  webhook.py
app/services/: __init__.py  catalog.py  conversation.py  document.py  embedding.py  lead.py  seeder.py  stage.py  template.py  tenant.py  waha.py
seeds/: photography_flow.json  photography_products.csv  qna_template_flow.json  sneaker_products.csv  sneaker_shop_flow.json
tests/: __init__.py  conftest.py  test_health.py  test_webhook.py
tests/test_agents/: __init__.py  conftest.py  test_conversation.py  test_formatter.py  test_graph.py  test_supervisor.py
tests/test_core/: test_security.py  test_utils.py
tests/test_rag/: conftest.py  test_catalog_upload.py  (+1 more)
(+7 files in other folders)
